--- a/new  1.html
+++ b/new  1.html
@@ -7,7 +7,7 @@
 		D.O.B.: 30/12/1895
 		</p>
 		<title>
-		<link rel=”stylesheet” type=”text/css” href=”newstyle.css” />
+		<link rel="stylesheet" type="text/css" href="newstyle.css" />
 		The Front		
 		</title>
 	</h1>
